--- a/wavesurferstyle.css
+++ b/wavesurferstyle.css
@@ -10,5 +10,30 @@ font-family: 'Roboto Slab', serif;
 }
 
 body {
-  background-color: inherit;
+
+}
+
+.controls{
+  text-align: center;
+
+}
+
+.btn {
+    background: none;
+    border: none;
+    color: black;
+    font-family: inherit;
+    padding: 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    outline: 0;
+}
+
+
+.btn-primary {
+
+
 }
