--- a/wavesurferstyle.css
+++ b/wavesurferstyle.css
@@ -1,6 +1,3 @@
-
-
-
 html {
 
   background-color:#ebeced;
@@ -11,6 +8,20 @@ font-family: 'Roboto Slab', serif;
 
 body {
 
+}
+
+#map {
+    height: 40vh;
+    min-height: 300px;
+    position: fixed;
+    top: 0;
+    left:0;
+    right:0;
+}
+
+article {
+    margin-top: 40vh;
+    padding: 40px;
 }
 
 .controls{
