--- a/wavesurferstyle.css
+++ b/wavesurferstyle.css
@@ -12,20 +12,33 @@ body {
 }
 
 #map {
-    height: 40vh;
-    min-height: 300px;
-    position: fixed;
-    top: 0;
-    left:0;
-    right:0;
-    z-index: 4;
+  height: 100vh;
+  width: 50%;
+    float: left;
+  border: 1px solid black;
+  position: fixed;
+  z-index: 4;
+}
+
+h1 {
+      font-family: 'Raleway', sans-serif;
+      font-size: 100%;
+      text-transform: uppercase;
+      margin-top: 10vh;
+      margin-left: 150px;
+      margin-right: 50px;
+      width: 40%;
+      text-align: left;
+      padding-left: 650px;
 }
 
 article {
-    margin-top: 40vh;
+    margin-top: 10vh;
     margin-left: 150px;
     margin-right: 150px;
-    padding: 0;
+    width: 40%;
+    text-align: left;
+    padding-left: 650px;
 }
 
 .controls{
